day-15/disallow-root-users.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: enforce
  rules:
  - name: check-runAsNonRoot
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Usuário root não é permitido"
      pattern:
        spec:
          containers:
            securityContext:
              runAsNonRoot: true
              runAsUser: 1000
