day-15/exclude.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: exclude-namespace-giropops
  namespace: giropops
spec:
  validationFailureAction: enforce
  rules:
  - name: trusted-registry
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - giropops
    validate:
      message: "Imagem do container não é permitida, exceto no namespace giropops"
      pattern:
        spec:
          containers:
          - name: "*"
            image: "cgr.dev/chainguard/*"
